BREAK: improve organization `format` and `decay` module

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -54,11 +54,7 @@
     "    SimpleBreitWigner,\n",
     ")\n",
     "from ampform_dpd.io import as_markdown_table, aslatex\n",
-    "from ampform_dpd.io.serialization.decay import (\n",
-    "    _get_decay_chains,\n",
-    "    get_final_state,\n",
-    "    to_decay,\n",
-    ")\n",
+    "from ampform_dpd.io.serialization.decay import get_final_state, to_decay\n",
     "from ampform_dpd.io.serialization.dynamics import (\n",
     "    formulate_breit_wigner,\n",
     "    formulate_dynamics,\n",
@@ -70,6 +66,7 @@
     "from ampform_dpd.io.serialization.format import (\n",
     "    ModelDefinition,\n",
     "    Propagator,\n",
+    "    get_decay_chains,\n",
     "    get_function_definition,\n",
     ")"
    ]
@@ -194,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "CHAIN_DEFS = _get_decay_chains(MODEL_DEFINITION)"
+    "CHAIN_DEFS = get_decay_chains(MODEL_DEFINITION)"
    ]
   },
   {
