--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -36,13 +36,19 @@
     "\n",
     "import json\n",
     "\n",
+    "import jax.numpy as jnp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import sympy as sp\n",
     "from ampform.dynamics import BlattWeisskopfSquared\n",
     "from ampform.dynamics.phasespace import BreakupMomentumSquared\n",
     "from ampform.kinematics.phasespace import Kallen\n",
-    "from IPython.display import JSON, Markdown, Math, display\n",
+    "from ampform.sympy import perform_cached_doit\n",
+    "from IPython.display import JSON, Markdown, Math\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import DefinedExpression\n",
+    "from ampform_dpd.decay import FinalStateID, State, ThreeBodyDecay\n",
     "from ampform_dpd.dynamics import (\n",
     "    BreitWigner,\n",
     "    BuggBreitWigner,\n",
@@ -53,7 +59,21 @@
     "    P,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
-    "from ampform_dpd.io import as_markdown_table, aslatex\n",
+    "from ampform_dpd.io import (\n",
+    "    as_markdown_table,\n",
+    "    aslatex,\n",
+    "    perform_cached_lambdify,\n",
+    "    simplify_latex_rendering,\n",
+    ")\n",
+    "from ampform_dpd.io.serialization.amplitude import (\n",
+    "    HelicityRecoupling,\n",
+    "    LSRecoupling,\n",
+    "    ParityRecoupling,\n",
+    "    formulate,\n",
+    "    formulate_aligned_amplitude,\n",
+    "    formulate_chain_amplitude,\n",
+    "    formulate_recoupling,\n",
+    ")\n",
     "from ampform_dpd.io.serialization.decay import get_final_state, to_decay\n",
     "from ampform_dpd.io.serialization.dynamics import (\n",
     "    formulate_breit_wigner,\n",
@@ -68,7 +88,9 @@
     "    Propagator,\n",
     "    get_decay_chains,\n",
     "    get_function_definition,\n",
-    ")"
+    ")\n",
+    "\n",
+    "simplify_latex_rendering()"
    ]
   },
   {
@@ -514,8 +536,457 @@
     "    formulate_dynamics(CHAIN_DEFS[18], MODEL_DEFINITION, to_latex, DYNAMICS_BUILDERS),\n",
     "    formulate_dynamics(CHAIN_DEFS[20], MODEL_DEFINITION, to_latex, DYNAMICS_BUILDERS),\n",
     "]\n",
-    "for expr in exprs:\n",
-    "    display(Math(aslatex(expr)))"
+    "Math(aslatex(exprs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Construct `AmplitudeModel`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unpolarized intensity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "λ0, λ1, λ2, λ3 = sp.symbols(\"lambda(:4)\", rational=True)\n",
+    "amplitude_expr, _ = formulate_aligned_amplitude(MODEL_DEFINITION, λ0, λ1, λ2, λ3)\n",
+    "amplitude_expr.cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Amplitude for the decay chain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Helicity recouplings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "λa = sp.Symbol(R\"\\lambda_a\", rational=True)\n",
+    "λb = sp.Symbol(R\"\\lambda_b\", rational=True)\n",
+    "λa0 = sp.Symbol(R\"\\lambda_a^0\", rational=True)\n",
+    "λb0 = sp.Symbol(R\"\\lambda_b^0\", rational=True)\n",
+    "f = sp.Symbol(\"f\", integer=True)\n",
+    "l = sp.Symbol(\"l\", integer=True, nonnegative=True)\n",
+    "s = sp.Symbol(\"s\", nonnegative=True, rational=True)\n",
+    "ja = sp.Symbol(\"j_a\", nonnegative=True, rational=True)\n",
+    "jb = sp.Symbol(\"j_b\", nonnegative=True, rational=True)\n",
+    "j = sp.Symbol(\"j\", nonnegative=True, rational=True)\n",
+    "exprs = [\n",
+    "    HelicityRecoupling(λa, λb, λa0, λb0),\n",
+    "    ParityRecoupling(λa, λb, λa0, λb0, f),\n",
+    "    LSRecoupling(λa, λb, l, s, ja, jb, j),\n",
+    "]\n",
+    "Math(aslatex({e: e.doit(deep=False) for e in exprs}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recoupling deserialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "recouplings = [\n",
+    "    formulate_recoupling(MODEL_DEFINITION, chain_idx=0, vertex_idx=i) for i in range(2)\n",
+    "]\n",
+    "Math(aslatex({e: e.doit(deep=False) for e in recouplings}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chain amplitudes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "definitions = formulate_chain_amplitude(λ0, λ1, λ2, λ3, MODEL_DEFINITION, chain_idx=0)\n",
+    "Math(aslatex(definitions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Full amplitude model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "MODEL = formulate(\n",
+    "    MODEL_DEFINITION,\n",
+    "    additional_builders=DYNAMICS_BUILDERS,\n",
+    "    cleanup_summations=True,\n",
+    "    to_latex=to_latex,\n",
+    ")\n",
+    "MODEL.intensity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "full-width"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Math(aslatex(MODEL.amplitudes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Math(aslatex(MODEL.variables))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Math(aslatex({**MODEL.invariants, **MODEL.masses}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Numeric results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "intensity_expr = MODEL.full_expression.xreplace(MODEL.variables)\n",
+    "intensity_expr = intensity_expr.xreplace(MODEL.parameter_defaults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "free_symbols = intensity_expr.free_symbols\n",
+    "assert len(free_symbols) == 3\n",
+    "assert str(sorted(free_symbols, key=str)) == \"[sigma1, sigma2, sigma3]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "mystnb": {
+     "code_prompt_show": "Lambdify to numeric function"
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "intensity_funcs = {}\n",
+    "for s, s_expr in tqdm(MODEL.invariants.items()):\n",
+    "    k = int(str(s)[-1])\n",
+    "    s_expr = s_expr.xreplace(MODEL.masses).doit()\n",
+    "    expr = perform_cached_doit(intensity_expr.xreplace({s: s_expr}))\n",
+    "    func = perform_cached_lambdify(expr, backend=\"jax\")\n",
+    "    assert len(func.argument_order) == 2\n",
+    "    intensity_funcs[k] = func"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "checksums = {\n",
+    "    misc_key: {checksum[\"name\"]: checksum[\"value\"] for checksum in misc_value}\n",
+    "    for misc_key, misc_value in MODEL_DEFINITION[\"misc\"].items()\n",
+    "    if \"checksum\" in misc_key\n",
+    "}\n",
+    "checksums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "checksum_points = {\n",
+    "    point[\"name\"]: {par[\"name\"]: par[\"value\"] for par in point[\"parameters\"]}\n",
+    "    for point in MODEL_DEFINITION[\"parameter_points\"]\n",
+    "}\n",
+    "checksum_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "array = []\n",
+    "for distribution_name, checksum in checksums.items():\n",
+    "    for point_name, expected in checksum.items():\n",
+    "        parameters = checksum_points[point_name]\n",
+    "        s1 = parameters[\"m_31_2\"] ** 2\n",
+    "        s2 = parameters[\"m_31\"] ** 2\n",
+    "        computed = intensity_funcs[3]({\"sigma1\": s1, \"sigma2\": s2})\n",
+    "        status = \"🟢\" if computed == expected else \"🔴\"\n",
+    "        array.append((distribution_name, point_name, computed, expected, status))\n",
+    "pd.DataFrame(array, columns=[\"Distribution\", \"Point\", \"Computed\", \"Expected\", \"Status\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Dalitz plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "i, j = (2, 1)\n",
+    "k, *_ = {1, 2, 3} - {i, j}\n",
+    "σk, σk_expr = list(MODEL.invariants.items())[k - 1]\n",
+    "Math(aslatex({σk: σk_expr}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "mystnb": {
+     "code_prompt_show": "Define meshgrid for Dalitz plot"
+    },
+    "tags": [
+     "hide-input",
+     "remove-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "resolution = 1_000\n",
+    "m = sorted(MODEL.masses, key=str)\n",
+    "x_min = float(((m[j] + m[k]) ** 2).xreplace(MODEL.masses))\n",
+    "x_max = float(((m[0] - m[i]) ** 2).xreplace(MODEL.masses))\n",
+    "y_min = float(((m[i] + m[k]) ** 2).xreplace(MODEL.masses))\n",
+    "y_max = float(((m[0] - m[j]) ** 2).xreplace(MODEL.masses))\n",
+    "x_diff = x_max - x_min\n",
+    "y_diff = y_max - y_min\n",
+    "x_min -= 0.05 * x_diff\n",
+    "x_max += 0.05 * x_diff\n",
+    "y_min -= 0.05 * y_diff\n",
+    "y_max += 0.05 * y_diff\n",
+    "X, Y = jnp.meshgrid(\n",
+    "    jnp.linspace(x_min, x_max, num=resolution),\n",
+    "    jnp.linspace(y_min, y_max, num=resolution),\n",
+    ")\n",
+    "dalitz_data = {\n",
+    "    f\"sigma{i}\": X,\n",
+    "    f\"sigma{j}\": Y,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "mystnb": {
+     "code_prompt_show": "Prepare parametrized numerical function"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "intensities = intensity_funcs[k](dalitz_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "assert not jnp.all(jnp.isnan(intensities)), \"All intensities are NaN\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def get_decay_products(\n",
+    "    decay: ThreeBodyDecay, subsystem_id: FinalStateID\n",
+    ") -> tuple[State, State]:\n",
+    "    if subsystem_id not in decay.final_state:\n",
+    "        msg = f\"Subsystem ID {subsystem_id} is not a valid final state ID\"\n",
+    "        raise ValueError(msg)\n",
+    "    return tuple(s for s in decay.final_state.values() if s.index != subsystem_id)\n",
+    "\n",
+    "\n",
+    "plt.rc(\"font\", size=18)\n",
+    "I_tot = jnp.nansum(intensities)\n",
+    "normalized_intensities = intensities / I_tot\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(14, 10))\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
+    "ax.set_aspect(\"equal\")\n",
+    "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
+    "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
+    "sigma_labels = {\n",
+    "    i: Rf\"$\\sigma_{i} = M^2\\left({' '.join(p.latex for p in get_decay_products(DECAY, i))}\\right)$\"\n",
+    "    for i in (1, 2, 3)\n",
+    "}\n",
+    "ax.set_xlabel(sigma_labels[i])\n",
+    "ax.set_ylabel(sigma_labels[j])\n",
+    "plt.show()"
    ]
   }
  ],
