DOC: remove markdown table for decay

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -44,7 +44,7 @@
     "from ampform.dynamics.phasespace import BreakupMomentumSquared\n",
     "from ampform.kinematics.phasespace import Kallen\n",
     "from ampform.sympy import perform_cached_doit\n",
-    "from IPython.display import JSON, Markdown, Math\n",
+    "from IPython.display import JSON, Math\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "from ampform_dpd import DefinedExpression\n",
@@ -59,12 +59,7 @@
     "    P,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    perform_cached_lambdify,\n",
-    "    simplify_latex_rendering,\n",
-    ")\n",
+    "from ampform_dpd.io import aslatex, perform_cached_lambdify, simplify_latex_rendering\n",
     "from ampform_dpd.io.serialization.amplitude import (\n",
     "    HelicityRecoupling,\n",
     "    LSRecoupling,\n",
@@ -170,20 +165,7 @@
    "outputs": [],
    "source": [
     "DECAY = to_decay(MODEL_DEFINITION, to_latex=to_latex)\n",
-    "Math(aslatex(DECAY))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "Markdown(as_markdown_table(DECAY))"
+    "Math(aslatex(DECAY, with_jp=True))"
    ]
   },
   {
