FIX: make `MultichannelBreitWigner` immutable

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -337,7 +337,7 @@
    "source": [
     "x, y, z = sp.symbols(\"x:z\")\n",
     "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\")\n",
-    "channels = [\n",
+    "channels = tuple(\n",
     "    ChannelArguments(\n",
     "        sp.Symbol(f\"Gamma{i}\"),\n",
     "        sp.Symbol(f\"m_{{a,{i}}}\"),\n",
@@ -346,7 +346,7 @@
     "        d,\n",
     "    )\n",
     "    for i in [1, 2]\n",
-    "]\n",
+    ")\n",
     "exprs = [\n",
     "    MultichannelBreitWigner(s, m0, channels),\n",
     "    BreitWigner(s, m0, Γ0, m1, m2, L, d),\n",
