FIX: improve symbol assumptions

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -169,9 +169,9 @@
    "outputs": [],
    "source": [
     "s, m0, Γ0, m1, m2 = sp.symbols(\"s m0 Gamma0 m1 m2\", nonnegative=True)\n",
-    "m_top, m_spec = sp.symbols(R\"m_\\mathrm{top} m_\\mathrm{spectator}\")\n",
-    "R_dec, R_prod = sp.symbols(R\"R_\\mathrm{res} R_{\\Lambda_c}\")\n",
-    "l_Λc, l_R = sp.symbols(R\"l_{\\Lambda_c} l_R\", integer=True, positive=True)\n",
+    "m_top, m_spec = sp.symbols(R\"m_\\mathrm{top} m_\\mathrm{spectator}\", nonnegative=True)\n",
+    "R_dec, R_prod = sp.symbols(R\"R_\\mathrm{res} R_{\\Lambda_c}\", nonnegative=True)\n",
+    "l_Λc, l_R = sp.symbols(R\"l_{\\Lambda_c} l_R\", integer=True, nonnegative=True)\n",
     "bw = BreitWignerMinL(s, m_top, m_spec, m0, Γ0, m1, m2, l_R, l_Λc, R_dec, R_prod)\n",
     "Latex(aslatex({bw: bw.doit(deep=False)}))"
    ]
@@ -205,8 +205,8 @@
     "    resonance_width = sp.Symbol(\n",
     "        Rf\"\\Gamma_{{{decay_chain.resonance.latex}}}\", nonnegative=True\n",
     "    )\n",
-    "    R_dec = sp.Symbol(R\"R_\\mathrm{res}\")\n",
-    "    R_prod = sp.Symbol(R\"R_{\\Lambda_c}\")\n",
+    "    R_dec = sp.Symbol(R\"R_\\mathrm{res}\", nonnegative=True)\n",
+    "    R_prod = sp.Symbol(R\"R_{\\Lambda_c}\", nonnegative=True)\n",
     "    parameter_defaults = {\n",
     "        parent_mass: decay_chain.parent.mass,\n",
     "        spectator_mass: decay_chain.spectator.mass,\n",
