--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "z = sp.Symbol(\"z\", nonnegative=True)\n",
-    "s, m1, m2, L, d = sp.symbols(\"s m1 m2 L R\")\n",
+    "s, m1, m2, L, d = sp.symbols(\"s m1 m2 L R\", nonnegative=True)\n",
     "exprs = [\n",
     "    FormFactor(s, m1, m2, L, d),\n",
     "    BlattWeisskopfSquared(z, L),\n",
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "x, y, z = sp.symbols(\"x:z\")\n",
-    "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\")\n",
+    "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\", nonnegative=True)\n",
     "exprs = [\n",
     "    BreitWigner(s, m0, Γ0, m1, m2, L, d),\n",
     "    SimpleBreitWigner(s, m0, Γ0),\n",
@@ -336,13 +336,13 @@
    "outputs": [],
    "source": [
     "x, y, z = sp.symbols(\"x:z\")\n",
-    "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\")\n",
+    "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\", nonnegative=True)\n",
     "channels = tuple(\n",
     "    ChannelArguments(\n",
-    "        sp.Symbol(f\"Gamma{i}\"),\n",
-    "        sp.Symbol(f\"m_{{a,{i}}}\"),\n",
-    "        sp.Symbol(f\"m_{{b,{i}}}\"),\n",
-    "        sp.Symbol(f\"L{i}\"),\n",
+    "        sp.Symbol(f\"Gamma{i}\", nonnegative=True),\n",
+    "        sp.Symbol(f\"m_{{a,{i}}}\", nonnegative=True),\n",
+    "        sp.Symbol(f\"m_{{b,{i}}}\", nonnegative=True),\n",
+    "        sp.Symbol(f\"L{i}\", integer=True, nonnegative=True),\n",
     "        d,\n",
     "    )\n",
     "    for i in [1, 2]\n",
@@ -406,7 +406,7 @@
    },
    "outputs": [],
    "source": [
-    "s, m0, Γ0, m1, m2, γ = sp.symbols(\"s m0 Gamma0 m1 m2 gamma\")\n",
+    "s, m0, Γ0, m1, m2, γ = sp.symbols(\"s m0 Gamma0 m1 m2 gamma\", nonnegative=True)\n",
     "expr = BuggBreitWigner(s, m0, Γ0, m1, m2, γ)\n",
     "Math(aslatex({expr: expr.doit(deep=False)}))"
    ]
@@ -446,7 +446,7 @@
     "    s = to_mandelstam_symbol(node)\n",
     "    mass = sp.Symbol(f\"m_{{{resonance}}}\", nonnegative=True)\n",
     "    width = sp.Symbol(Rf\"\\Gamma_{{{resonance}}}\", nonnegative=True)\n",
-    "    γ = sp.Symbol(Rf\"\\gamma_{{{resonance}}}\")\n",
+    "    γ = sp.Symbol(Rf\"\\gamma_{{{resonance}}}\", nonnegative=True)\n",
     "    m1 = to_mass_symbol(i)\n",
     "    m2 = to_mass_symbol(j)\n",
     "    final_state = get_final_state(model)\n",
