--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -273,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "s, m0, w0, m1, m2, L, R, z = sp.symbols(\"s m0 Gamma0 m1 m2 L R z\")\n",
+    "s, m0, w0, m1, m2, L, R, z = sp.symbols(\"s m0 Gamma0 m1 m2 L R z\", nonnegative=True)\n",
     "exprs = [\n",
     "    RelativisticBreitWigner(s, m0, w0, m1, m2, L, R),\n",
     "    EnergyDependentWidth(s, m0, w0, m1, m2, L, R),\n",
