FIX: avoid overwriting chain amplitudes

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -678,7 +678,8 @@
    "metadata": {
     "tags": [
      "hide-input",
-     "full-width"
+     "full-width",
+     "scroll-output"
     ]
    },
    "outputs": [],
