BREAK: make `ChannelArguments` an expression class

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -339,11 +339,13 @@
     "s, m0, Γ0, m1, m2, L, d = sp.symbols(\"s m0 Gamma0 m1 m2 L R\", nonnegative=True)\n",
     "channels = tuple(\n",
     "    ChannelArguments(\n",
-    "        sp.Symbol(f\"Gamma{i}\", nonnegative=True),\n",
-    "        sp.Symbol(f\"m_{{a,{i}}}\", nonnegative=True),\n",
-    "        sp.Symbol(f\"m_{{b,{i}}}\", nonnegative=True),\n",
-    "        sp.Symbol(f\"L{i}\", integer=True, nonnegative=True),\n",
-    "        d,\n",
+    "        s,\n",
+    "        m0,\n",
+    "        width=sp.Symbol(f\"Gamma{i}\", nonnegative=True),\n",
+    "        m1=sp.Symbol(f\"m_{{a,{i}}}\", nonnegative=True),\n",
+    "        m2=sp.Symbol(f\"m_{{b,{i}}}\", nonnegative=True),\n",
+    "        angular_momentum=sp.Symbol(f\"L{i}\", integer=True, nonnegative=True),\n",
+    "        meson_radius=d,\n",
     "    )\n",
     "    for i in [1, 2]\n",
     ")\n",
