ENH: show reason for `assert` failure

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -770,7 +770,7 @@
     "    s_expr = s_expr.xreplace(MODEL.masses).doit()\n",
     "    expr = perform_cached_doit(intensity_expr.xreplace({s: s_expr}))\n",
     "    func = perform_cached_lambdify(expr, backend=\"jax\")\n",
-    "    assert len(func.argument_order) == 2\n",
+    "    assert len(func.argument_order) == 2, func.argument_order\n",
     "    intensity_funcs[k] = func"
    ]
   },
