DOC: split lines in amplitude rendering

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -681,7 +681,7 @@
    },
    "outputs": [],
    "source": [
-    "Math(aslatex(MODEL.amplitudes))"
+    "Math(aslatex(MODEL.amplitudes, terms_per_line=1))"
    ]
   },
   {
