--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -35,6 +35,7 @@
     "from __future__ import annotations\n",
     "\n",
     "import json\n",
+    "import logging\n",
     "\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
@@ -85,6 +86,7 @@
     "    get_function_definition,\n",
     ")\n",
     "\n",
+    "logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
     "simplify_latex_rendering()"
    ]
   },
