DX: limit number of rendered amplitudes in notebook

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "import json\n",
     "import logging\n",
+    "import os\n",
     "\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
@@ -686,7 +687,13 @@
    },
    "outputs": [],
    "source": [
-    "Math(aslatex(MODEL.amplitudes, terms_per_line=1))"
+    "if \"EXECUTE_NB\" in os.environ:\n",
+    "    selected_amplitudes = MODEL.amplitudes\n",
+    "else:\n",
+    "    selected_amplitudes = {\n",
+    "        k: v for i, (k, v) in enumerate(MODEL.amplitudes.items()) if i < 2\n",
+    "    }\n",
+    "Math(aslatex(selected_amplitudes, terms_per_line=1))"
    ]
   },
   {
