DOC: add preview warning for `ampform_dpd.io.serialization`

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -11,6 +11,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebooks illustrates the use of the {mod}`ampform_dpd.io.serialization` module, which can be used to build amplitude models from the [amplitude-serialization](https://rub-ep1.github.io/amplitude-serialization) initiative.\n",
+    "\n",
+    ":::{warning}\n",
+    "The {mode}`ampform_dpd.io.serialization` module is a preview feature.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -679,6 +690,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "hide-input",
      "full-width",
@@ -791,6 +805,17 @@
    },
    "source": [
     "### Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    ":::{error}\n",
+    "The following serves as a numerical check on whether the amplitude model has been deserialized correctly. For now, this is not the case, see [ComPWA/ampform-dpd#133](https://github.com/ComPWA/ampform-dpd/issues/133) for updates.\n",
+    ":::"
    ]
   },
   {
@@ -950,8 +975,12 @@
     "jupyter": {
      "source_hidden": true
     },
+    "mystnb": {
+     "code_prompt_show": "Dalitz plot is not yet correct"
+    },
     "tags": [
-     "hide-input"
+     "hide-input",
+     "hide-output"
     ]
    },
    "outputs": [],
