FIX: fix `mode` -> `mod` typo

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -16,7 +16,7 @@
     "This notebooks illustrates the use of the {mod}`ampform_dpd.io.serialization` module, which can be used to build amplitude models from the [amplitude-serialization](https://rub-ep1.github.io/amplitude-serialization) initiative.\n",
     "\n",
     ":::{warning}\n",
-    "The {mode}`ampform_dpd.io.serialization` module is a preview feature.\n",
+    "The {mod}`ampform_dpd.io.serialization` module is a preview feature.\n",
     ":::"
    ]
   },
