--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -49,7 +49,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import sympy as sp\n",
-    "from ampform.dynamics import BlattWeisskopfSquared\n",
+    "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
     "from ampform.dynamics.phasespace import BreakupMomentumSquared\n",
     "from ampform.kinematics.phasespace import Kallen\n",
     "from ampform.sympy import perform_cached_doit\n",
@@ -63,7 +63,6 @@
     "    BuggBreitWigner,\n",
     "    ChannelArguments,\n",
     "    EnergyDependentWidth,\n",
-    "    FormFactor,\n",
     "    MultichannelBreitWigner,\n",
     "    P,\n",
     "    SimpleBreitWigner,\n",
