--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -611,7 +611,7 @@
     "ax_t1.set_xlabel(Rf\"$\\theta({final_state[2].latex}, {final_state[3].latex})$\")\n",
     "ax_t2.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[3].latex})$\")\n",
     "ax_t3.set_xlabel(Rf\"$\\theta({final_state[1].latex}, {final_state[2].latex})$\")\n",
-    "fig.suptitle(f'Selected resonances: ${\", \".join(resonance_selector.value)}$')\n",
+    "fig.suptitle(f\"Selected resonances: ${', '.join(resonance_selector.value)}$\")\n",
     "fig.tight_layout()\n",
     "\n",
     "lines = None\n",
@@ -664,7 +664,7 @@
     "    kwargs.pop(\"hide_expressions\")\n",
     "    kwargs.pop(\"simplify_expressions\")\n",
     "    selected_resonances = list(resonance_selector.value)\n",
-    "    fig.suptitle(f'Selected resonances: ${\", \".join(selected_resonances)}$')\n",
+    "    fig.suptitle(f\"Selected resonances: ${', '.join(selected_resonances)}$\")\n",
     "    dpd_pars = {k: int(v) for k, v in kwargs.items() if k in dpd_func.parameters}\n",
     "    ampform_pars = {\n",
     "        k: int(v) for k, v in kwargs.items() if k in ampform_func.parameters\n",
