--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -36,7 +36,8 @@
     "import matplotlib.pyplot as plt\n",
     "import qrules\n",
     "import sympy as sp\n",
-    "from ampform.dynamics import BlattWeisskopfSquared, EnergyDependentWidth\n",
+    "from ampform.dynamics import EnergyDependentWidth\n",
+    "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
     "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
@@ -50,7 +51,7 @@
     "    to_three_body_decay,\n",
     ")\n",
     "from ampform_dpd.decay import State\n",
-    "from ampform_dpd.dynamics import FormFactor, RelativisticBreitWigner\n",
+    "from ampform_dpd.dynamics import RelativisticBreitWigner\n",
     "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
     "from ampform_dpd.io import (\n",
     "    as_markdown_table,\n",
@@ -585,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
