MAINT: define `STATIC_PAGE` with walrus operator

--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -59,8 +59,7 @@
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
     "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "\n",
-    "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
-    "if NO_TQDM:\n",
+    "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
     "if TYPE_CHECKING:\n",
     "    from tensorwaves.interface import DataSample, ParametrizedFunction"
@@ -530,7 +529,7 @@
     "ax1.set_xlabel(sigma_labels[i])\n",
     "ax2.set_xlabel(sigma_labels[j])\n",
     "resonance_counter1, resonance_counter2 = 0, 0\n",
-    "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
+    "for chain in tqdm(model.decay.chains, disable=STATIC_PAGE):\n",
     "    resonance = chain.resonance\n",
     "    if set(chain.decay_products) == set(get_decay_products(subsystem_id=i)):\n",
     "        ax = ax1\n",
