--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -93,8 +93,10 @@
     "    get_function_definition,\n",
     ")\n",
     "\n",
-    "logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
-    "simplify_latex_rendering()"
+    "simplify_latex_rendering()\n",
+    "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
+    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
+    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
   {
