--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -64,8 +64,8 @@
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
     "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "\n",
-    "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
-    "if NO_TQDM:\n",
+    "STATIC_PAGE = \"EXECUTE_NB\" in os.environ\n",
+    "if STATIC_PAGE:\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
     "if TYPE_CHECKING:\n",
     "    from tensorwaves.interface import DataSample, ParametrizedFunction"
@@ -551,7 +551,7 @@
     "ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
     "ax.set_xlabel(sigma_labels[i])\n",
     "resonance_counter = 0\n",
-    "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
+    "for chain in tqdm(model.decay.chains, disable=STATIC_PAGE):\n",
     "    if {p.index for p in chain.decay_products} != {1, 3}:\n",
     "        continue\n",
     "    resonance = chain.resonance\n",
