--- a/docs/comparison/jpsi2pipipi.ipynb
+++ b/docs/comparison/jpsi2pipipi.ipynb
@@ -83,8 +83,7 @@
     "logging.getLogger(\"jax\").setLevel(logging.ERROR)  # mute JAX\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"  # mute TF\n",
     "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
-    "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
-    "if NO_TQDM:\n",
+    "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
     "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
@@ -859,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
