ENH: render pcolormesh figures with `rasterized`

--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -458,7 +458,7 @@
    },
    "outputs": [],
    "source": [
-    "%config InlineBackend.figure_formats = ['png']"
+    "%config InlineBackend.figure_formats = ['svg']"
    ]
   },
   {
@@ -483,7 +483,7 @@
     "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
-    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities, rasterized=True)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
@@ -494,19 +494,6 @@
     "ax.set_xlabel(sigma_labels[i])\n",
     "ax.set_ylabel(sigma_labels[j])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%config InlineBackend.figure_formats = ['svg']"
    ]
   },
   {
