--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -921,6 +921,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%config InlineBackend.figure_formats = ['svg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "jupyter": {
      "source_hidden": true
     },
@@ -948,7 +961,7 @@
     "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
-    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities, rasterized=True)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
