FEAT: define `ampform_dpd.io.cached` module with aliases
* ENH: used cached substitution, doit, and lambdify in notebooks

--- a/docs/comparison/jpsi2phipipi.ipynb
+++ b/docs/comparison/jpsi2phipipi.ipynb
@@ -45,7 +45,7 @@
     "import qrules\n",
     "import sympy as sp\n",
     "from ampform.kinematics.lorentz import FourMomentumSymbol, InvariantMass\n",
-    "from ampform.sympy import perform_cached_doit\n",
+    "from ampform.sympy._cache import get_readable_hash  # noqa: PLC2701\n",
     "from IPython.display import Latex, Markdown, clear_output, display\n",
     "from ipywidgets import (\n",
     "    Accordion,\n",
@@ -66,16 +66,9 @@
     "from ampform_dpd import DalitzPlotDecompositionBuilder\n",
     "from ampform_dpd.adapter.qrules import normalize_state_ids, to_three_body_decay\n",
     "from ampform_dpd.decay import Particle\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    get_readable_hash,\n",
-    "    perform_cached_lambdify,\n",
-    "    simplify_latex_rendering,\n",
-    ")\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
     "\n",
     "if TYPE_CHECKING:\n",
-    "    from ampform.helicity import HelicityModel\n",
     "    from qrules.transition import ReactionInfo\n",
     "    from tensorwaves.interface import DataSample, ParameterValue, ParametrizedFunction\n",
     "\n",
@@ -397,16 +390,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unfold_intensity(model: HelicityModel) -> sp.Expr:\n",
-    "    unfolded_intensity = perform_cached_doit(model.intensity)\n",
-    "    unfolded_amplitudes = {\n",
-    "        symbol: perform_cached_doit(expr) for symbol, expr in model.amplitudes.items()\n",
-    "    }\n",
-    "    return unfolded_intensity.xreplace(unfolded_amplitudes)\n",
-    "\n",
-    "\n",
-    "ampform_intensity_expr = unfold_intensity(AMPFORM_MODEL)\n",
-    "dpd_intensity_expr = unfold_intensity(DPD_MODEL)"
+    "ampform_intensity_expr = cached.unfold(AMPFORM_MODEL)\n",
+    "dpd_intensity_expr = cached.unfold(DPD_MODEL)"
    ]
   },
   {
@@ -415,11 +400,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ampform_func = perform_cached_lambdify(\n",
+    "ampform_func = cached.lambdify(\n",
     "    ampform_intensity_expr,\n",
     "    parameters=AMPFORM_MODEL.parameter_defaults,\n",
     ")\n",
-    "dpd_func = perform_cached_lambdify(\n",
+    "dpd_func = cached.lambdify(\n",
     "    dpd_intensity_expr,\n",
     "    parameters=DPD_MODEL.parameter_defaults,\n",
     ")"
@@ -652,7 +637,8 @@
     "    h = get_readable_hash(obj)\n",
     "    if h in __EXPRS:\n",
     "        return __EXPRS[h]\n",
-    "    expr = intensity_expr.xreplace(parameters).xreplace(fixed_variables)\n",
+    "    expr = cached.xreplace(intensity_expr, parameters)\n",
+    "    expr = cached.xreplace(expr, fixed_variables)\n",
     "    expr = sp.trigsimp(expr)\n",
     "    __EXPRS[h] = expr\n",
     "    return expr\n",
