--- a/docs/xib2pkk.ipynb
+++ b/docs/xib2pkk.ipynb
@@ -38,7 +38,6 @@
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth\n",
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
-    "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
@@ -53,12 +52,7 @@
     "from ampform_dpd.decay import State\n",
     "from ampform_dpd.dynamics import RelativisticBreitWigner\n",
     "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    perform_cached_lambdify,\n",
-    "    simplify_latex_rendering,\n",
-    ")\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
@@ -404,10 +398,6 @@
    },
    "outputs": [],
    "source": [
-    "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
-    "full_intensity_expr = perform_cached_doit(\n",
-    "    unfolded_intensity_expr.xreplace(model.amplitudes)\n",
-    ")\n",
     "free_parameters = {\n",
     "    k: v\n",
     "    for k, v in model.parameter_defaults.items()\n",
@@ -417,8 +407,8 @@
     "fixed_parameters = {\n",
     "    k: v for k, v in model.parameter_defaults.items() if k not in free_parameters\n",
     "}\n",
-    "intensity_func = perform_cached_lambdify(\n",
-    "    full_intensity_expr.xreplace(fixed_parameters),\n",
+    "intensity_func = cached.lambdify(\n",
+    "    expr=cached.xreplace(cached.unfold(model), fixed_parameters),\n",
     "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
     ")\n",
