--- a/docs/jpsi2ksp.ipynb
+++ b/docs/jpsi2ksp.ipynb
@@ -38,7 +38,6 @@
     "import sympy as sp\n",
     "from ampform.dynamics import EnergyDependentWidth\n",
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
-    "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import Latex, Markdown\n",
     "from tensorwaves.data.transform import SympyDataTransformer\n",
     "from tqdm.auto import tqdm\n",
@@ -48,19 +47,13 @@
     "from ampform_dpd.decay import State\n",
     "from ampform_dpd.dynamics import RelativisticBreitWigner\n",
     "from ampform_dpd.dynamics.builder import formulate_breit_wigner_with_form_factor\n",
-    "from ampform_dpd.io import (\n",
-    "    as_markdown_table,\n",
-    "    aslatex,\n",
-    "    perform_cached_lambdify,\n",
-    "    simplify_latex_rendering,\n",
-    ")\n",
+    "from ampform_dpd.io import as_markdown_table, aslatex, cached, simplify_latex_rendering\n",
     "\n",
     "simplify_latex_rendering()\n",
     "logging.getLogger(\"absl\").setLevel(logging.ERROR)  # mute JAX\n",
     "warnings.simplefilter(\"ignore\", category=RuntimeWarning)\n",
     "\n",
-    "NO_TQDM = \"EXECUTE_NB\" in os.environ\n",
-    "if NO_TQDM:\n",
+    "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
     "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)\n",
     "if TYPE_CHECKING:\n",
     "    from tensorwaves.interface import DataSample, ParametrizedFunction"
@@ -378,10 +371,6 @@
    },
    "outputs": [],
    "source": [
-    "unfolded_intensity_expr = perform_cached_doit(model.intensity)\n",
-    "full_intensity_expr = perform_cached_doit(\n",
-    "    unfolded_intensity_expr.xreplace(model.amplitudes)\n",
-    ")\n",
     "free_parameters = {\n",
     "    k: v\n",
     "    for k, v in model.parameter_defaults.items()\n",
@@ -391,8 +380,9 @@
     "fixed_parameters = {\n",
     "    k: v for k, v in model.parameter_defaults.items() if k not in free_parameters\n",
     "}\n",
-    "intensity_func = perform_cached_lambdify(\n",
-    "    full_intensity_expr.xreplace(fixed_parameters),\n",
+    "full_intensity_expr = cached.unfold(model)\n",
+    "intensity_func = cached.lambdify(\n",
+    "    cached.xreplace(full_intensity_expr, fixed_parameters),\n",
     "    parameters=free_parameters,\n",
     "    backend=\"jax\",\n",
     ")\n",
@@ -432,7 +422,7 @@
    },
    "outputs": [],
    "source": [
-    "%config InlineBackend.figure_formats = ['png']"
+    "%config InlineBackend.figure_formats = ['svg']"
    ]
   },
   {
@@ -457,7 +447,7 @@
     "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
-    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities, rasterized=True)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
@@ -468,19 +458,6 @@
     "ax.set_xlabel(sigma_labels[i])\n",
     "ax.set_ylabel(sigma_labels[j])\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "remove-input"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%config InlineBackend.figure_formats = ['svg']"
    ]
   },
   {
@@ -530,7 +507,7 @@
     "ax1.set_xlabel(sigma_labels[i])\n",
     "ax2.set_xlabel(sigma_labels[j])\n",
     "resonance_counter1, resonance_counter2 = 0, 0\n",
-    "for chain in tqdm(model.decay.chains, disable=NO_TQDM):\n",
+    "for chain in tqdm(model.decay.chains, disable=STATIC_PAGE):\n",
     "    resonance = chain.resonance\n",
     "    if set(chain.decay_products) == set(get_decay_products(subsystem_id=i)):\n",
     "        ax = ax1\n",
