--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -52,7 +52,6 @@
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
     "from ampform.dynamics.phasespace import BreakupMomentumSquared\n",
     "from ampform.kinematics.phasespace import Kallen\n",
-    "from ampform.sympy import perform_cached_doit\n",
     "from IPython.display import JSON, Math\n",
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -67,7 +66,7 @@
     "    P,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
-    "from ampform_dpd.io import aslatex, perform_cached_lambdify, simplify_latex_rendering\n",
+    "from ampform_dpd.io import aslatex, cached, simplify_latex_rendering\n",
     "from ampform_dpd.io.serialization.amplitude import (\n",
     "    HelicityRecoupling,\n",
     "    LSRecoupling,\n",
@@ -93,8 +92,10 @@
     "    get_function_definition,\n",
     ")\n",
     "\n",
-    "logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
-    "simplify_latex_rendering()"
+    "simplify_latex_rendering()\n",
+    "if STATIC_PAGE := \"EXECUTE_NB\" in os.environ:\n",
+    "    logging.getLogger(\"ampform.sympy\").setLevel(logging.ERROR)\n",
+    "    logging.getLogger(\"ampform_dpd.io\").setLevel(logging.ERROR)"
    ]
   },
   {
@@ -711,8 +712,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intensity_expr = MODEL.full_expression.xreplace(MODEL.variables)\n",
-    "intensity_expr = intensity_expr.xreplace(MODEL.parameter_defaults)"
+    "intensity_expr = cached.xreplace(cached.unfold(MODEL), MODEL.variables)\n",
+    "intensity_expr = cached.xreplace(intensity_expr, MODEL.parameter_defaults)"
    ]
   },
   {
@@ -750,8 +751,8 @@
     "for s, s_expr in tqdm(MODEL.invariants.items()):\n",
     "    k = int(str(s)[-1])\n",
     "    s_expr = s_expr.xreplace(MODEL.masses).doit()\n",
-    "    expr = perform_cached_doit(intensity_expr.xreplace({s: s_expr}))\n",
-    "    func = perform_cached_lambdify(expr, backend=\"jax\")\n",
+    "    expr = cached.doit(intensity_expr.xreplace({s: s_expr}))\n",
+    "    func = cached.lambdify(expr, backend=\"jax\")\n",
     "    assert len(func.argument_order) == 2, func.argument_order\n",
     "    intensity_funcs[k] = func"
    ]
@@ -919,6 +920,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%config InlineBackend.figure_formats = ['svg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "jupyter": {
      "source_hidden": true
     },
@@ -946,7 +960,7 @@
     "normalized_intensities = intensities / I_tot\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(14, 10))\n",
-    "mesh = ax.pcolormesh(X, Y, normalized_intensities)\n",
+    "mesh = ax.pcolormesh(X, Y, normalized_intensities, rasterized=True)\n",
     "ax.set_aspect(\"equal\")\n",
     "c_bar = plt.colorbar(mesh, ax=ax, pad=0.01)\n",
     "c_bar.ax.set_ylabel(\"Normalized intensity (a.u.)\")\n",
