DOC: show `use_coefficients` example in documentation

--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -264,12 +264,39 @@
    "metadata": {
     "tags": [
      "hide-input",
+     "full-width",
+     "hide-output",
+     "scroll-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "Latex(aslatex(model.amplitudes).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the aligned amplitudes are built up of Wigner-$d$ functions, Clebsch–Gordan coefficients ($C$), a resonance parametrization ($\\mathcal{R}(\\sigma)$), and two coupling symbols $\\mathcal{H}^\\text{prod}_\\dots,\\mathcal{H}^\\text{dec}_\\dots$. In some cases, you want to combine the couplings into one scaling factor. That can be done with the `use_coefficients` flag:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": [
      "full-width"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(model.amplitudes))"
+    "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)\n",
+    "(symbol, expr), *_ = model.amplitudes.items()\n",
+    "Latex(aslatex({symbol: expr}).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
    ]
   }
  ],
