Remove Kaellen function usage

--- a/docs/serialization.ipynb
+++ b/docs/serialization.ipynb
@@ -50,8 +50,7 @@
     "import pandas as pd\n",
     "import sympy as sp\n",
     "from ampform.dynamics.form_factor import BlattWeisskopfSquared, FormFactor\n",
-    "from ampform.dynamics.phasespace import BreakupMomentumSquared\n",
-    "from ampform.kinematics.phasespace import Kallen\n",
+    "from ampform.dynamics.phasespace import BreakupMomentum, BreakupMomentumSquared\n",
     "from IPython.display import JSON, Math\n",
     "from tqdm.auto import tqdm\n",
     "\n",
@@ -63,7 +62,6 @@
     "    ChannelArguments,\n",
     "    EnergyDependentWidth,\n",
     "    MultichannelBreitWigner,\n",
-    "    P,\n",
     "    SimpleBreitWigner,\n",
     ")\n",
     "from ampform_dpd.io import aslatex, cached, simplify_latex_rendering\n",
@@ -282,8 +280,7 @@
     "    SimpleBreitWigner(s, m0, Γ0),\n",
     "    EnergyDependentWidth(s, m0, Γ0, m1, m2, L, d),\n",
     "    FormFactor(s, m1, m2, L, d),\n",
-    "    P(s, m1, m2),\n",
-    "    Kallen(x, y, z),\n",
+    "    BreakupMomentum(s, m1, m2),\n",
     "]\n",
     "Math(aslatex({e: e.doit(deep=False) for e in exprs}))"
    ]
@@ -342,8 +339,7 @@
     "    BreitWigner(s, m0, Γ0),\n",
     "    EnergyDependentWidth(s, m0, Γ0, m1, m2, L, d),\n",
     "    FormFactor(s, m1, m2, L, d),\n",
-    "    P(s, m1, m2),\n",
-    "    Kallen(x, y, z),\n",
+    "    BreakupMomentum(s, m1, m2),\n",
     "]\n",
     "Math(aslatex({e: e.doit(deep=False) for e in exprs}))"
    ]
@@ -395,7 +391,7 @@
    "source": [
     "s, m0, Γ0, m1, m2, γ = sp.symbols(\"s m0 Gamma0 m1 m2 gamma\", nonnegative=True)\n",
     "expr = BuggBreitWigner(s, m0, Γ0, m1, m2, γ)\n",
-    "Math(aslatex({expr: expr.doit(deep=False)}))"
+    "Math(aslatex({expr: expr.doit(deep=False)}))  # type: ignore  # noqa: PGH003"
    ]
   },
   {
@@ -993,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
