--- a/docs/lc2pkpi.ipynb
+++ b/docs/lc2pkpi.ipynb
@@ -264,14 +264,13 @@
    "metadata": {
     "tags": [
      "hide-input",
-     "full-width",
      "hide-output",
      "scroll-output"
     ]
    },
    "outputs": [],
    "source": [
-    "Latex(aslatex(model.amplitudes).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
+    "Latex(aslatex(model.amplitudes, terms_per_line=1))"
    ]
   },
   {
@@ -287,16 +286,13 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    },
-    "tags": [
-     "full-width"
-    ]
+    }
    },
    "outputs": [],
    "source": [
     "model = model_builder.formulate(reference_subsystem=1, use_coefficients=True)\n",
     "(symbol, expr), *_ = model.amplitudes.items()\n",
-    "Latex(aslatex({symbol: expr}).replace(R\"\\sum_\", R\"\\sum\\limits_\"))"
+    "Latex(aslatex({symbol: expr}, terms_per_line=1))"
    ]
   }
  ],
@@ -319,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
